--- a/a_04/submessage1.html
+++ b/a_04/submessage1.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <article id="subbox">
-      The title theme of Pokemon Series right after intro scene. This song has been rearranged through genereations. 
+      The title theme of Pokemon game series right after the intro scene. This song has been rearranged through genereations.
     </article>
   </body>
 </html>
