--- a/22.html
+++ b/22.html
@@ -19,7 +19,8 @@
 			line-height: 1.5;
 			text-transform:uppercase;
 			font-style:italic;
-		}
+			text-align: center;
+			}
 		span{
 			padding:15px;
 			background-color:rgba(255,0,0,0.3);
