--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <title>sakemin</title>
   <link rel="stylesheet" href="master.css">
+  <link rel="icon" href="favicon.png" sizes="96x96">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.11/p5.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.11/addons/p5.dom.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.11/addons/p5.sound.min.js"></script>
