--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -23,12 +23,12 @@
           </a>
         </li>
         <li class="tab">
-          <a id="works">
+          <a href="works.html" target="_self" id="works">
           works
           </a>
         </li>
         <li class="tab">
-          <a id="contact">
+          <a href="contact.html" target="_self" id="contact">
           contact
           </a>
         </li>
