--- a/portfolio/works.html
+++ b/portfolio/works.html
@@ -39,6 +39,7 @@
         <a href="http://www.facebook.com/uhheung" target="_blank"><img src="facebook.png" alt="facebook" id="facebook" class="icon"/></a>
         <a href="https://www.instagram.com/sake_min/" target="_blank"><img src="instagram.png" alt="instagram" id="instagram" class="icon"/></a>
         <a href="https://soundcloud.com/sakemin" target="_blank"><img src="soundcloud.png" alt="soundcloud" id="soundcloud" class="icon"/></a>
+        <a href="https://sakemin.imgur.com/" target="_blank"><img src="imgur.png" alt="imgur" id="imgur" class="icon"/></a>
       </div>
     </ul>
   </nav>
@@ -51,7 +52,7 @@
   <div class="page-wrapper">
     <div class="work-thumbnail">
       <img src="seeyouagain_thumbnail.jpg" alt="See You Again" />
-      <a href="pormoku.html" target="_self">
+      <a href="seeyouagain.html" target="_self">
         <div class="overlay">
           <div class="text">See You Again<br/>(Tribute to Arteiyu)<br/>2017</div>
         </div>
@@ -107,10 +108,17 @@
         </div>
       </a>
     </div><div class="work-thumbnail">
-      <img src="pormoku_thumbnail.png" alt="Pormoku" />
+      <img src="futurelab_thumbnail.png" alt="Future Lab" />
       <a href="pormoku.html" target="_self">
         <div class="overlay">
-          <div class="text">Pormoku<br/>2016</div>
+          <div class="text">Future Lab<br/>2016</div>
+        </div>
+      </a>
+    </div><div class="work-thumbnail">
+      <img src="ibrush_thumbnail.png" alt="iBrush" />
+      <a href="pormoku.html" target="_self">
+        <div class="overlay">
+          <div class="text">iBrush<br/>2017</div>
         </div>
       </a>
     </div><div class="work-thumbnail">
@@ -121,19 +129,32 @@
         </div>
       </a>
     </div><div class="work-thumbnail">
-      <img src="pormoku_thumbnail.png" alt="Pormoku" />
+      <img src="gamja_thumbnail.png" alt="Feeling Potato" />
       <a href="pormoku.html" target="_self">
         <div class="overlay">
-          <div class="text">Pormoku<br/>2016</div>
+          <div class="text">Feeling Potato<br/>(느낄감자)<br/>2016</div>
+        </div>
+      </a>
+    </div><div class="work-thumbnail">
+      <img src="music_thumbnail.png" alt="Music Works" />
+      <a href="https://soundcloud.com/sakemin" target="_blank">
+        <div class="overlay">
+          <div class="text">Music Works<br/>2017~</div>
+        </div>
+      </a>
+    </div><div class="work-thumbnail">
+      <img src="image_thumbnail.png" alt="Photo Works" />
+      <a href="https://sakemin.imgur.com/all" target="_blank">
+        <div class="overlay">
+          <div class="text">Photo Works<br/>2017~</div>
         </div>
       </a>
     </div>
-    hey
   </div>
   <div id="mainfooter">
     <br/>
     <br/>
-    <br/> Jongmin 'sakemin' Jung<br/><br/> Art &amp; Technology at Sogang Univ.<br/><br/> ⓒ 2017. sakemin all rights reserved.
+    <br/> Jongmin 'sakemin' Jung<br/><br/> Art &amp; Technology at Sogang Univ.<br/><br/> ⓒ 2017. sakemin all rights reserved.<br/><br/>
   </div>
 </body>
 
