--- a/portfolio/pormoku.html
+++ b/portfolio/pormoku.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="utf-8">
   <title>sakemin</title>
-  <link rel="stylesheet" href="works.css">
+  <link rel="stylesheet" href="pormoku.css">
   <link rel="icon" href="favicon.png" sizes="96x96">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.11/p5.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.11/addons/p5.dom.min.js"></script>
@@ -26,7 +26,7 @@
           </a>
       </li>
       <li class="tab">
-        <a id="works">
+        <a href="works.html" target="_self" id="works">
           works
           </a>
       </li>
@@ -39,6 +39,7 @@
         <a href="http://www.facebook.com/uhheung" target="_blank"><img src="facebook.png" alt="facebook" id="facebook" class="icon"/></a>
         <a href="https://www.instagram.com/sake_min/" target="_blank"><img src="instagram.png" alt="instagram" id="instagram" class="icon"/></a>
         <a href="https://soundcloud.com/sakemin" target="_blank"><img src="soundcloud.png" alt="soundcloud" id="soundcloud" class="icon"/></a>
+        <a href="https://sakemin.imgur.com/" target="_blank"><img src="imgur.png" alt="imgur" id="imgur" class="icon"/></a>
       </div>
     </ul>
   </nav>
@@ -46,15 +47,28 @@
 
   </nav>
   <div id="topblank">
-
   </div>
+
   <div class="page-wrapper">
-
+    <h1>Pormoku</h1>
+    <h2>2016</h2>
+    <h2>with Youngseo Kim</h2>
+    <div id="video">
+      <iframe width="100%" height="100%" src="https://www.youtube.com/embed/ENu_IeofCcA" frameborder="0" allowfullscreen></iframe>
+    </div>
+    <h3>Direction, Development, Design : Jongmin Jung</h3>
+    <h3>Video : Youngseo Kim</h3>
+    <div>
+      A game based on oriental traditional game, 'gomoku'(five-in-a-row). You must make your stones five in a row first. The basic rule is same with gomoku, but in this game, there are 'portals'. You make your stones five in a row through portals, too.
+      <br/>Inspired by the game 'Portal' by Valve.<br/><br/>
+    </div>
+    <a href="https://drive.google.com/file/d/0Bwlm5U--fJzUWU1wT1NLNFdMN2s/view" target="_blank">Download(mobile Ver. with Unity)</a>
   </div>
+
   <div id="mainfooter">
     <br/>
     <br/>
-    <br/> Jongmin 'sakemin' Jung<br/><br/> Art &amp; Technology at Sogang Univ.<br/><br/> ⓒ 2017. sakemin all rights reserved.
+    <br/> Jongmin 'sakemin' Jung<br/><br/> Art &amp; Technology at Sogang Univ.<br/><br/> ⓒ 2017. sakemin all rights reserved.<br/><br/>
   </div>
 </body>
 
