--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -47,7 +47,7 @@
         <br/>
         <br/>
         <br/>
-        <img src="sakemin_logo_alpha.png" alt="logo" id="mainlogo"/>
+        <a href="https://sakemin.github.io/pokesketch" target="_blank"><img src="sakemin_logo_alpha.png" alt="logo" id="mainlogo"/></a>
         (sakemin)
       </div>
 
