--- a/portfolio/works.html
+++ b/portfolio/works.html
@@ -59,35 +59,35 @@
       </a>
     </div><div class="work-thumbnail">
       <img src="lately_thumbnail.png" alt="Lately" />
-      <a href="pormoku.html" target="_self">
+      <a href="lately.html" target="_self">
         <div class="overlay">
           <div class="text">Lately<br/>2016</div>
         </div>
       </a>
     </div><div class="work-thumbnail">
       <img src="supper_thumbnail.png" alt="Supper" />
-      <a href="pormoku.html" target="_self">
+      <a href="supper.html" target="_self">
         <div class="overlay">
           <div class="text">Supper<br/>(만찬)<br/>2016</div>
         </div>
       </a>
     </div><div class="work-thumbnail">
       <img src="modernist_thumbnail.png" alt="The Days of Modernist Uhheung" />
-      <a href="pormoku.html" target="_self">
+      <a href="modernist.html" target="_self">
         <div class="overlay">
           <div class="text">The Days of Modernist Uhheung<br/>2016</div>
         </div>
       </a>
     </div><div class="work-thumbnail">
       <img src="conti_thumbnail.png" alt="Conti" />
-      <a href="pormoku.html" target="_self">
+      <a href="conti.html" target="_self">
         <div class="overlay">
           <div class="text">Conti<br/>2017</div>
         </div>
       </a>
     </div><div class="work-thumbnail">
       <img src="escapism_thumbnail.png" alt="Escapism" />
-      <a href="pormoku.html" target="_self">
+      <a href="escapism.html" target="_self">
         <div class="overlay">
           <div class="text">Escapism<br/>2016</div>
         </div>
@@ -95,28 +95,28 @@
     </div>
     <div class="work-thumbnail">
       <img src="third_thumbnail.png" alt="Third Person Reverie" />
-      <a href="pormoku.html" target="_self">
+      <a href="third.html" target="_self">
         <div class="overlay">
           <div class="text">Third Person Reverie<br/>2016</div>
         </div>
       </a>
     </div><div class="work-thumbnail">
       <img src="sound_thumbnail.png" alt="Sound" />
-      <a href="pormoku.html" target="_self">
+      <a href="sound.html" target="_self">
         <div class="overlay">
           <div class="text">KIA Motors Sound Design<br/>2017</div>
         </div>
       </a>
     </div><div class="work-thumbnail">
       <img src="futurelab_thumbnail.png" alt="Future Lab" />
-      <a href="pormoku.html" target="_self">
+      <a href="futurelab.html" target="_self">
         <div class="overlay">
           <div class="text">Future Lab<br/>2016</div>
         </div>
       </a>
     </div><div class="work-thumbnail">
       <img src="ibrush_thumbnail.png" alt="iBrush" />
-      <a href="pormoku.html" target="_self">
+      <a href="ibrush.html" target="_self">
         <div class="overlay">
           <div class="text">iBrush<br/>2017</div>
         </div>
@@ -129,10 +129,10 @@
         </div>
       </a>
     </div><div class="work-thumbnail">
-      <img src="gamja_thumbnail.png" alt="Feeling Potato" />
-      <a href="pormoku.html" target="_self">
+      <img src="gamja_thumbnail.png" alt="Feeling Potatoes" />
+      <a href="potato.html" target="_self">
         <div class="overlay">
-          <div class="text">Feeling Potato<br/>(느낄감자)<br/>2016</div>
+          <div class="text">Feeling Potatoes<br/>(느낄감자)<br/>2016</div>
         </div>
       </a>
     </div><div class="work-thumbnail">
