--- a/pokesketch/index.html
+++ b/pokesketch/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>Pokemon Red</title>
+    <link rel="icon" href="favicon.png" sizes="96x96">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.14/p5.js"></script>
     <script src="sketch.js"></script>
   </head>
