--- a/portfolio/about.html
+++ b/portfolio/about.html
@@ -49,8 +49,8 @@
 
     </div>
   <div class="page-wrapper">
-    <img src="profile.jpg" slt"profile" id="profile" align="left"/>
     <div id="profile-info">
+      <img src="profile.jpg" slt"profile" id="profile" align="right"/>
     <h1>Jongmin "sakemin" Jung</h1>
     <h1 lang="ko">정종민</h1>
     <h2>- Born on 1st of April, 1997</h2>
@@ -58,14 +58,14 @@
     <h2>- Undergraduate at Art &amp; Technology in Sogang Univ.</h2>
     <h2>- Media Artist</h2>
     <h2>- Game Director</h2>
-    <h3>&nbsp;&nbsp;Jongmin Jung is a undergraduate student majoring in Art &amp; Technology at Sogang University in South Korea. He is studying media arts, sound design, game direction, filmmaking, physical computing, UI/UX design and so on. He loves playing games as well as making ones. He is into Pokemon series recently. His soul Pokemon is Snorlax. One day, he will make an awesome game just like Pokemon. Count on it!</h3>
+    <div>&nbsp;&nbsp;Jongmin Jung is a undergraduate student majoring in Art &amp; Technology at Sogang University in South Korea. He is studying media arts, sound design, game direction, filmmaking, physical computing, UI/UX design and so on. He loves playing games as well as making ones. He is into Pokemon series recently. His soul Pokemon is Snorlax. One day, he will make an awesome game just like Pokemon. Count on it!</div>
     </div>
   </div>
   <div id="mainfooter">
     <br/>
     <br/>
     <br/>
-    Jongmin 'sakemin' Jung<br/><br/>
+    Jongmin <a href="index.html">'sakemin'</a> Jung<br/><br/>
     Art &amp; Technology at Sogang Univ.<br/><br/>
     ⓒ 2017. sakemin all rights reserved.
   </div>
