--- a/portfolio/contact.html
+++ b/portfolio/contact.html
@@ -78,6 +78,10 @@
             <td><a href="http://soundcloud.com/sakemin" target="_blank">sakemin</a></td>
           </tr>
           <tr>
+            <td class="table-category">Imgur&nbsp;&nbsp;&nbsp;&nbsp;</td>
+            <td><a href="https://sakemin.imgur.com" target="_blank">sakemin</a></td>
+          </tr>
+          <tr>
             <td class="table-category">Kakao ID</td>
             <td>bobo7806</td>
           </tr>
@@ -88,7 +92,7 @@
   <div id="mainfooter">
     <br/>
     <br/>
-    <br/> Jongmin 'sakemin' Jung<br/><br/> Art &amp; Technology at Sogang Univ.<br/><br/> ⓒ 2017. sakemin all rights reserved.
+    <br/> Jongmin <a href="index.html">'sakemin'</a> Jung<br/><br/> Art &amp; Technology at Sogang Univ.<br/><br/> ⓒ 2017. sakemin all rights reserved.
   </div>
 </body>
 
