--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -41,14 +41,13 @@
       </ul>
 
       <div class="maincenter">
-        <br/>
-        <br/>
-        <br/>This is the page of
-        <br/>
-        <br/>
-        <br/>
+        <p>
+          This is the page of
+        </p>
         <a href="https://sakemin.github.io/pokesketch" target="_blank"><img src="sakemin_logo_alpha.png" alt="logo" id="mainlogo"/></a>
-        (sakemin)
+        <p>
+          (sakemin)
+        </p>
       </div>
 
 
@@ -62,8 +61,7 @@
     <div id="mainfooter">
       <br/>
       <br/>
-      <br/>
-      Jongmin 'sakemin' Jung<br/><br/>
+      Jongmin <a href="index.html">'sakemin'</a> Jung<br/><br/>
       Art &amp; Technology at Sogang Univ.<br/><br/>
       ⓒ 2017. sakemin all rights reserved.
     </div>
