--- a/portfolio/works.html
+++ b/portfolio/works.html
@@ -154,7 +154,7 @@
   <div id="mainfooter">
     <br/>
     <br/>
-    <br/> Jongmin 'sakemin' Jung<br/><br/> Art &amp; Technology at Sogang Univ.<br/><br/> ⓒ 2017. sakemin all rights reserved.<br/><br/>
+    <br/> Jongmin <a href="index.html">'sakemin'</a> Jung<br/><br/> Art &amp; Technology at Sogang Univ.<br/><br/> ⓒ 2017. sakemin all rights reserved.<br/><br/>
   </div>
 </body>
 
