--- a/portfolio/conti.html
+++ b/portfolio/conti.html
@@ -63,7 +63,7 @@
     <h3>Video Filming : Jongmin Jung</h3>
     <h3>Video Editing : Jaewon Choi</h3>
     <h3>Music : "リサフランク420 / 現代のコンピュー" by Macintosh Plus (Vektroid)</h3>
-    <div>
+    <div id="description">
       Conti, the instrument of future which can make continious sounds.
     </div>
   </div>
