--- a/portfolio/modernist.html
+++ b/portfolio/modernist.html
@@ -61,7 +61,7 @@
     <h3>VFX : Woosik Kim</h3>
     <h3>Filming : Woosik Kim</h3>
     <h3>Sound : Dongmin Kim</h3>
-    <div>
+    <div id="description">
       Mr. Uhheung, the modernist lives a repetitive routine of daily life.
     </div>
   </div>
