--- a/portfolio/pormoku.html
+++ b/portfolio/pormoku.html
@@ -58,7 +58,7 @@
     </div>
     <h3>Direction, Development, Design : Jongmin Jung</h3>
     <h3>Video : Youngseo Kim</h3>
-    <div>
+    <div id="description">
       A game based on oriental traditional game, 'gomoku'(five-in-a-row). You must make your stones five in a row first. The basic rule is same with gomoku, but in this game, there are 'portals'. You make your stones five in a row through portals, too.
       <br/>Inspired by the game 'Portal' by Valve.<br/><br/>
     </div>
