--- a/portfolio/potato.html
+++ b/portfolio/potato.html
@@ -56,7 +56,7 @@
       <img src="gamja_2.jpg" style="width:100%;"/><br/><br/>
       <img src="gamja_3.jpg" style="width:100%;"/><br/><br/>
       <img src="gamja_4.jpg" style="width:100%;"/>
-    <div><br/>
+    <div id="description"><br/>
       Brand Identity &amp; Packaging &amp; Interior Design for my dream potato chips place.
     </div>
   </div>
