--- a/portfolio/supper.html
+++ b/portfolio/supper.html
@@ -59,7 +59,7 @@
     <h3>Director : Yeongjin Kang, Sijoon Kim, Jongmin Jung and Woohee Cheon</h3>
     <h3>Editor : Jongmin Jung</h3>
     <h3>Filming : Sijoon Kim and Jaewon Choi</h3>
-    <div>
+    <div id="description">
       In this competitive world, aren't we missing our delicious 'supper'?
     </div>
   </div>
