--- a/portfolio/ibrush.html
+++ b/portfolio/ibrush.html
@@ -55,7 +55,7 @@
     <div id="video">
       <iframe width="100%" height="100%" src="https://www.youtube.com/embed/QdK2MXjJFH4" frameborder="0" allowfullscreen></iframe>
     </div>
-    <div><br/>
+    <div id="description"><br/>
       Using OSC, you can draw your imagination with your cellphone as a brush!
     </div>
   </div>
