--- a/portfolio/sound.html
+++ b/portfolio/sound.html
@@ -55,7 +55,7 @@
     <div id="video">
       <iframe width="100%" height="100%" src="https://www.youtube.com/embed/RZ6pcunNWes" frameborder="0" allowfullscreen></iframe>
     </div>
-    <div><br/>
+    <div id="description"><br/>
       No offense to KIA Motors and LG Electronics.
       <br/>
     </div>
