--- a/portfolio/about.html
+++ b/portfolio/about.html
@@ -12,6 +12,7 @@
   <script src="sketch.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Raleway|Ubuntu" rel="stylesheet">
   <link href="http://fonts.googleapis.com/earlyaccess/jejugothic.css" rel="stylesheet">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
 </head>
 
 <body>
