comments and music work page

--- a/portfolio/music.html
+++ b/portfolio/music.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="utf-8">
   <title>sakemin</title>
-  <link rel="stylesheet" href="contact.css">
+  <link rel="stylesheet" href="pormoku.css">
   <link rel="icon" href="favicon.png" sizes="96x96">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.11/p5.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.11/addons/p5.dom.min.js"></script>
@@ -32,7 +32,7 @@
           </a>
       </li>
       <li class="tab">
-        <a id="contact">
+        <a href="contact.html" target="_self" id="contact">
           contact
           </a>
       </li>
@@ -48,48 +48,18 @@
 
   </nav>
   <div id="topblank">
+  </div>
 
-  </div>
   <div class="page-wrapper">
-    <div id="contact-info">
-      <h1>Jongmin "sakemin" Jung</h1>
-      <h1 lang="ko">정종민</h1>
-      <table>
-        <tr>
-          <caption class="tablecap">Undergraduate at <a href="http://creative.sogang.ac.kr" target="_blank">Art &amp; Technology</a> in <a href="http://www.sogang.ac.kr" target="_blank">Sogang Univ.</a></caption>
-        </tr>
-          <tr>
-            <td class="table-category">E-mail</td>
-            <td><a href="mailto:bobo7806@naver.com" target="_blank">bobo7806@naver.com</a> / <a href="mailto:bobo7806@gmail.com" target="_blank">bobo7806@gmail.com</a></td>
-          </tr>
-          <tr>
-            <td class="table-category">Facebook</td>
-            <td><a href="http://facebook.com/uhheung" target="_blank">http://facebook.com/uhheung</a></td>
-          </tr>
-          <tr>
-            <td class="table-category">Instagram</td>
-            <td><a href="http://instagram.com/sake_min" target="_blank">sake_min</a></td>
-          </tr>
-          <tr>
-            <td class="table-category">Soundcloud&nbsp;&nbsp;&nbsp;&nbsp;</td>
-            <td><a href="http://soundcloud.com/sakemin" target="_blank">sakemin</a></td>
-          </tr>
-          <tr>
-            <td class="table-category">Imgur&nbsp;&nbsp;&nbsp;&nbsp;</td>
-            <td><a href="https://sakemin.imgur.com" target="_blank">sakemin</a></td>
-          </tr>
-          <tr>
-            <td class="table-category">Kakao ID</td>
-            <td>bobo7806</td>
-          </tr>
-      </table>
-    </div>
-    <br/>
+    <h1>Music Works</h1>
+    <h2>~2017</h2>
+    <iframe width="100%" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/users/10186636&amp;color=%238a8a8a&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;show_teaser=true"></iframe>
   </div>
+
   <div id="mainfooter">
     <br/>
     <br/>
-    <br/> Jongmin <a href="index.html">'sakemin'</a> Jung<br/><br/> Art &amp; Technology at Sogang Univ.<br/><br/> ⓒ 2017. sakemin all rights reserved.
+    <br/> Jongmin <a href="index.html">'sakemin'</a> Jung<br/><br/> Art &amp; Technology at Sogang Univ.<br/><br/> ⓒ 2017. sakemin all rights reserved.<br/><br/>
   </div>
 </body>
 
