--- a/portfolio/about.html
+++ b/portfolio/about.html
@@ -16,10 +16,10 @@
 </head>
 
 <body>
-    <nav class="abs-nav">
+    <nav class="abs-nav"><!--navigation bar / fixed-->
       <br/>
       <a href="index.html" target="_self" id="tomain"><img src="sakemin_logo_alpha.png" alt="sakemin" id="logo"/></a>
-      <ul class="tab-wrapper">
+      <ul class="tab-wrapper"><!--3 tabs-->
         <li class="tab">
           <a id="about">
           about
@@ -35,7 +35,7 @@
           contact
           </a>
         </li>
-        <div id="iconbar">
+        <div id="iconbar"><!--4 icons-->
           <a href="http://www.facebook.com/uhheung" target="_blank"><img src="facebook.png" alt="facebook" id="facebook" class="icon"/></a>
           <a href="https://www.instagram.com/sake_min/" target="_blank"><img src="instagram.png" alt="instagram" id="instagram" class="icon"/></a>
           <a href="https://soundcloud.com/sakemin" target="_blank"><img src="soundcloud.png" alt="soundcloud" id="soundcloud" class="icon"/></a>
@@ -43,10 +43,10 @@
         </div>
       </ul>
     </nav>
-    <nav class="abs-nav-under">
+    <nav class="abs-nav-under"><!--black line-->
 
     </nav>
-    <div id="topblank">
+    <div id="topblank"><!--blank beneath the nav layer-->
 
     </div>
   <div class="page-wrapper">
@@ -59,7 +59,7 @@
     <h2>- Undergraduate at Art &amp; Technology in Sogang Univ.</h2>
     <h2>- Media Artist</h2>
     <h2>- Game Director</h2>
-    <div>&nbsp;&nbsp;Jongmin Jung is a undergraduate student majoring in Art &amp; Technology at Sogang University in South Korea. He is studying media arts, sound design, game direction, filmmaking, physical computing, UI/UX design and so on. He loves playing games as well as making ones. He is into Pokemon series recently. His soul Pokemon is Snorlax. One day, he will make an awesome game just like Pokemon. Count on it!</div>
+    <div id="about-text">&nbsp;&nbsp;Jongmin Jung is a undergraduate student majoring in Art &amp; Technology at Sogang University in South Korea. He is studying media arts, sound design, game direction, filmmaking, physical computing, UI/UX design and so on. He loves playing games as well as making ones. He is into Pokemon series recently. His soul Pokemon is Snorlax. One day, he will make an awesome game just like Pokemon. Count on it!</div>
     </div>
   </div>
   <div id="mainfooter">
