--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -9,15 +9,15 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.11/p5.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.11/addons/p5.dom.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.11/addons/p5.sound.min.js"></script>
-  <script src="sketch.js"></script>
+  <script src="sketch.js"></script><!--not used yet, for in case of using it-->
   <link href="https://fonts.googleapis.com/css?family=Raleway|Ubuntu" rel="stylesheet">
-  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0"><!--responsive-->
 </head>
 
 <body>
-    <nav class="abs-nav">
+    <nav class="abs-nav"><!--navigation bar, always top(fixed)-->
       <br />
-      <ul class="tab-wrapper">
+      <ul class="tab-wrapper"><!--3 tabs in it-->
         <li class="tab">
           <a href="about.html" target="_self" id="about">
           about
@@ -33,7 +33,7 @@
           contact
           </a>
         </li>
-        <div id="iconbar">
+        <div id="iconbar"><!--4 icons to sns-->
           <a href="http://www.facebook.com/uhheung" target="_blank"><img src="facebook.png" alt="facebook" id="facebook" class="icon"/></a>
           <a href="https://www.instagram.com/sake_min/" target="_blank"><img src="instagram.png" alt="instagram" id="instagram" class="icon"/></a>
           <a href="https://soundcloud.com/sakemin" target="_blank"><img src="soundcloud.png" alt="soundcloud" id="soundcloud" class="icon"/></a>
@@ -43,9 +43,9 @@
 
       <div class="maincenter">
         <p>
-          This is the page of
+          This is the page <a href="https://sakemin.github.io/pokesketch" target="_blank" id="topokemon">o</a>f <!--if you click 'o', it opens pokemon html-->
         </p>
-        <a href="https://sakemin.github.io/pokesketch" target="_blank"><img src="sakemin_logo_alpha.png" alt="logo" id="mainlogo"/></a>
+        <img src="sakemin_logo_alpha.png" alt="logo" id="mainlogo"/><!--main logo sakemin-->
         <p>
           (sakemin)
         </p>
@@ -54,12 +54,12 @@
 
     </nav>
 
-    <nav class="abs-nav-under">   </nav>
-  <div class="page-wrapper">
-    <div id="topblank">
+    <nav class="abs-nav-under">   </nav><!--black line-->
+  <div class="page-wrapper"><!--grey, page wrapping-->
+    <div id="topblank"> <!--blank beneath the nav layer-->
 
     </div>
-    <div id="mainfooter">
+    <div id="mainfooter"><!--footer-->
       <br/>
       <br/>
       Jongmin <a href="index.html">'sakemin'</a> Jung<br/><br/>
