--- a/portfolio/works.html
+++ b/portfolio/works.html
@@ -138,7 +138,7 @@
       </a>
     </div><div class="work-thumbnail">
       <img src="music_thumbnail.png" alt="Music Works" />
-      <a href="music.html" target="_blank">
+      <a href="music.html" target="_self">
         <div class="overlay">
           <div class="text">Music Works<br/>2017~</div>
         </div>
