Dim + Way added

--- a/portfolio/way.html
+++ b/portfolio/way.html
@@ -48,18 +48,16 @@
   </div>
 
   <div class="page-wrapper">
-    <h1>Supper(만찬)</h1>
-    <h2>2016</h2>
-    <h2>with Yeongjin Kang, Sijoon Kim and Woohee Cheon</h2>
-    <div id="video">
-      <iframe width="100%" height="100%" src="https://www.youtube.com/embed/zUKgTfEOhM4" frameborder="0" allowfullscreen></iframe>
-    </div>
-    <h3>Director : Yeongjin Kang, Sijoon Kim, Jongmin Jung and Woohee Cheon</h3>
-    <h3>Editor : Jongmin Jung</h3>
-    <h3>Filming : Sijoon Kim and Jaewon Choi</h3>
-    <h3>Special Thanks to : Junyoung "<a href="dim.html" target="_self">Dim</a>" Kim</h3>
-    <div id="description">
-      In this competitive world, aren't we missing our delicious 'supper'?
+    <h1>Way to Him</h1>
+    <h2>2017</h2>
+      <img src="way_01.jpg" style="width:100%;"/><br/><br/>
+      <img src="way_02.jpg" style="width:100%;"/>
+    <div lang="ko" id="description"><br/>
+      올 초, 2월 첫째 날의 새벽에 저의 아름다운 친구이자 동기가 먼저 우리를 떠나 별이 되었습니다. 그 친구는 431호 랩실에서 열심히 작업을 하고 우리와 게임도 하고 맥딜리버리도 시켜 먹었습니다. 저보다 코딩도 잘했고 영상도 잘 만들었고 포켓몬도 더 잘 알았기에 당시 435호 랩실에 배정 받았던 저도 431호에 그 친구를 자주 보러 갔었습니다.<br/>
+친구가 떠난 날, 431호에 그 친구의 자리에는 그 친구의 물건들이 가지런히 정리되어 있었습니다. 그 자리에 앉아 웃고 있는 친구의 모습이 너무 선해 그 날 그 자리 앞에서 많이 울었던 기억이 납니다.<br/>
+저는 이번 과제의 로케이션을 431호 앞 복도로 정했습니다. 제가 과제의 대상으로 정한 원본 사진은 그 친구가 떠난 길입니다. 발인식 후, 가족분들이 사진 속 보이는 눈밭에 친구를 보내주었습니다.<br/>
+지금은 비록 431호의 분위기가 많이 바뀌었지만, 저와 그 친구, 그리고 아텍 16학번들의 기억 속에 있는 작년의 즐거웠던 431호도 저 길을 따라 그 친구에게 닿길 바라며 작업했습니다.<br/>
+‘아주 아주 긴 시간이 흐르면, 난 다시 나로 돌아오고, 넌 다시 너로 돌아올 것이다. 그럼 그때까지만, 안녕’
     </div>
   </div>
 
