--- a/portfolio/works.html
+++ b/portfolio/works.html
@@ -134,6 +134,13 @@
         </div>
       </a>
     </div><div class="work-thumbnail">
+        <img src="way_01.jpg" alt="Way to Him" />
+        <a href="way.html" target="_self">
+          <div class="overlay">
+            <div class="text">Way to Him<br/>2017</div>
+          </div>
+        </a>
+      </div><div class="work-thumbnail">
       <img src="music_thumbnail.png" alt="Music Works" />
       <a href="music.html" target="_self">
         <div class="overlay">
@@ -142,7 +149,7 @@
       </a>
     </div><div class="work-thumbnail">
       <img src="image_thumbnail.png" alt="Photo Works" />
-      <a href="https://sakemin.imgur.com/all" target="_blank">
+      <a href="https://imgur.com/a/FzDzS" target="_blank">
         <div class="overlay">
           <div class="text">Photo Works<br/>2017~</div>
         </div>
