--- a/portfolio/dim.html
+++ b/portfolio/dim.html
@@ -48,18 +48,12 @@
   </div>
 
   <div class="page-wrapper">
-    <h1>Supper(만찬)</h1>
-    <h2>2016</h2>
-    <h2>with Yeongjin Kang, Sijoon Kim and Woohee Cheon</h2>
-    <div id="video">
-      <iframe width="100%" height="100%" src="https://www.youtube.com/embed/zUKgTfEOhM4" frameborder="0" allowfullscreen></iframe>
-    </div>
-    <h3>Director : Yeongjin Kang, Sijoon Kim, Jongmin Jung and Woohee Cheon</h3>
-    <h3>Editor : Jongmin Jung</h3>
-    <h3>Filming : Sijoon Kim and Jaewon Choi</h3>
-    <h3>Special Thanks to : Junyoung "<a href="dim.html" target="_self">Dim</a>" Kim</h3>
-    <div id="description">
-      In this competitive world, aren't we missing our delicious 'supper'?
+    <h1>Mr. Dim</h1>
+    <h2>2015</h2>
+      <img src="dim_1.jpg" style="width:100%;"/><br/><br/>
+      <img src="dim_2.jpg" style="width:100%;"/>
+    <div lang="ko" id="description"><br/>
+      두낭 두낭 두낭이
     </div>
   </div>
 
