--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -9,6 +9,8 @@
   <script src="sketch.js"></script><!--not used yet, for in case of using it-->
   <link href="https://fonts.googleapis.com/css?family=Raleway|Ubuntu" rel="stylesheet">
   <meta name="viewport" content="width=device-width,initial-scale=1.0"><!--responsive-->
+  <meta property="og:description"content="사케사케사케민">
+  <meta property="og:image"content="sakemin_logo.png">
 </head>
 
 <body>
