--- a/portfolio/works.html
+++ b/portfolio/works.html
@@ -56,99 +56,105 @@
         </div>
       </a>
     </div><div class="work-thumbnail">
-      <img src="lately_thumbnail.png" alt="Lately" />
+      <img src="lately_thumbnail.jpg" alt="Lately" />
       <a href="lately.html" target="_self">
         <div class="overlay">
           <div class="text">Lately<br/>2016</div>
         </div>
       </a>
     </div><div class="work-thumbnail">
-      <img src="supper_thumbnail.png" alt="Supper" />
+      <img src="supper_thumbnail.jpg" alt="Supper" />
       <a href="supper.html" target="_self">
         <div class="overlay">
           <div class="text">Supper<br/>(만찬)<br/>2016</div>
         </div>
       </a>
     </div><div class="work-thumbnail">
-      <img src="modernist_thumbnail.png" alt="The Days of Modernist Uhheung" />
+      <img src="modernist_thumbnail.jpg" alt="The Days of Modernist Uhheung" />
       <a href="modernist.html" target="_self">
         <div class="overlay">
           <div class="text">The Days of Modernist Uhheung<br/>2016</div>
         </div>
       </a>
     </div><div class="work-thumbnail">
-      <img src="conti_thumbnail.png" alt="Conti" />
+      <img src="conti_thumbnail.jpg" alt="Conti" />
       <a href="conti.html" target="_self">
         <div class="overlay">
           <div class="text">Conti<br/>2017</div>
         </div>
       </a>
     </div><div class="work-thumbnail">
-      <img src="escapism_thumbnail.png" alt="Escapism" />
+      <img src="escapism_thumbnail.jpg" alt="Escapism" />
       <a href="escapism.html" target="_self">
         <div class="overlay">
           <div class="text">Escapism<br/>2016</div>
         </div>
       </a>
-    </div>
-    <div class="work-thumbnail">
-      <img src="third_thumbnail.png" alt="Third Person Reverie" />
+    </div><div class="work-thumbnail">
+      <img src="third_thumbnail.jpg" alt="Third Person Reverie" />
       <a href="third.html" target="_self">
         <div class="overlay">
           <div class="text">Third Person Reverie<br/>2016</div>
         </div>
       </a>
     </div><div class="work-thumbnail">
-      <img src="sound_thumbnail.png" alt="Sound" />
+      <img src="vanessa_thumbnail.jpg" alt="Vanessa" />
+      <a href="vanessa.html" target="_self">
+        <div class="overlay">
+          <div class="text">Vanessa<br/>2017</div>
+        </div>
+      </a>
+    </div><div class="work-thumbnail">
+      <img src="sound_thumbnail.jpg" alt="Sound" />
       <a href="sound.html" target="_self">
         <div class="overlay">
           <div class="text">KIA Motors Sound Design<br/>2017</div>
         </div>
       </a>
     </div><div class="work-thumbnail">
-      <img src="futurelab_thumbnail.png" alt="Future Lab" />
+      <img src="futurelab_thumbnail.jpg" alt="Future Lab" />
       <a href="futurelab.html" target="_self">
         <div class="overlay">
           <div class="text">Future Lab<br/>2016</div>
         </div>
       </a>
     </div><div class="work-thumbnail">
-      <img src="ibrush_thumbnail.png" alt="iBrush" />
+      <img src="ibrush_thumbnail.jpg" alt="iBrush" />
       <a href="ibrush.html" target="_self">
         <div class="overlay">
           <div class="text">iBrush<br/>2017</div>
         </div>
       </a>
     </div><div class="work-thumbnail">
-      <img src="pormoku_thumbnail.png" alt="Pormoku" />
+      <img src="pormoku_thumbnail.jpg" alt="Pormoku" />
       <a href="pormoku.html" target="_self">
         <div class="overlay">
           <div class="text">Pormoku<br/>2016</div>
         </div>
       </a>
     </div><div class="work-thumbnail">
-      <img src="gamja_thumbnail.png" alt="Feeling Potatoes" />
+      <img src="gamja_thumbnail.jpg" alt="Feeling Potatoes" />
       <a href="potato.html" target="_self">
         <div class="overlay">
           <div class="text">Feeling Potatoes<br/>(느낄감자)<br/>2016</div>
         </div>
       </a>
     </div><div class="work-thumbnail">
-        <img src="way_01.jpg" alt="Way to Him" />
+        <img src="way_thumbnail.jpg" alt="Way to Him" />
         <a href="way.html" target="_self">
           <div class="overlay">
             <div class="text">Way to Him<br/>2017</div>
           </div>
         </a>
       </div><div class="work-thumbnail">
-      <img src="music_thumbnail.png" alt="Music Works" />
+      <img src="music_thumbnail.jpg" alt="Music Works" />
       <a href="music.html" target="_self">
         <div class="overlay">
           <div class="text">Music Works<br/>2017~</div>
         </div>
       </a>
     </div><div class="work-thumbnail">
-      <img src="image_thumbnail.png" alt="Photo Works" />
+      <img src="image_thumbnail.jpg" alt="Photo Works" />
       <a href="https://imgur.com/a/FzDzS" target="_blank">
         <div class="overlay">
           <div class="text">Photo Works<br/>2017~</div>
