--- a/portfolio/futurelab.html
+++ b/portfolio/futurelab.html
@@ -57,7 +57,7 @@
     <h3>Sound : Jongmin Jung</h3>
     <h3>Unreal Engine Developer : Jongmin Jung</h3>
     <div id="description">
-      핵 폐기물이 매장된 곳이 있다. 10000년 후 지구의 거주자들에게 이 밑에 핵 폐기물이 있다는 것을 어떻게 경고할 것인가?<br/> 물질 자체를 느끼는 감각, 촉각 하지만 어찌 보면 청각도 물질의 진동을 느끼는 감각이다. 결국 청각도 아주 정밀한 촉각이라고 생각할 수 있다. 우주는 물질로 이루어져 있다. 생명체들도 마찬가지다. 고로 모든 생명체들은 이 우주에서 살기 위해서는 물질 자체를 느낄 수 있을 것이다.<br/> 생명체들에게 불안감과
+      &nbsp;&nbsp;핵 폐기물이 매장된 곳이 있다. 10000년 후 지구의 거주자들에게 이 밑에 핵 폐기물이 있다는 것을 어떻게 경고할 것인가?<br/> 물질 자체를 느끼는 감각, 촉각 하지만 어찌 보면 청각도 물질의 진동을 느끼는 감각이다. 결국 청각도 아주 정밀한 촉각이라고 생각할 수 있다. 우주는 물질로 이루어져 있다. 생명체들도 마찬가지다. 고로 모든 생명체들은 이 우주에서 살기 위해서는 물질 자체를 느낄 수 있을 것이다.<br/> 생명체들에게 불안감과
       공포감을 주는 주파수의 소리들을 하나의 사운드로 만들어 설치한다.
     </div>
   </div>
