--- a/portfolio/works.html
+++ b/portfolio/works.html
@@ -167,7 +167,7 @@
   <div id="mainfooter">
     <br/>
     <br/>
-    <br/> Jongmin <a href="index.html">'sakemin'</a> Jung<br/><br/> Art &amp; Technology at Sogang Univ.<br/><br/> ⓒ 2017. sakemin all rights reserved.<br/><br/><a href="gyroid.html">띠용</a>
+    <br/> Jongmin <a href="index.html">'sakemin'</a> Jung<br/><br/> Art &amp; Technology at Sogang Univ.<br/><br/> ⓒ 2017. sakemin all rights reserved.<br/><br/>
   </div>
 </body>
 
