--- a/portfolio/supper.html
+++ b/portfolio/supper.html
@@ -50,11 +50,11 @@
   <div class="page-wrapper">
     <h1>Supper(만찬)</h1>
     <h2>2016</h2>
-    <h2>with Yeongjin Kang, Sijoon Kim and Woohee Cheon</h2>
+    <h2>with Yeongjin Kang, Sijoon Kim and Wooyoung Cheon</h2>
     <div id="video">
       <iframe width="100%" height="100%" src="https://www.youtube.com/embed/zUKgTfEOhM4" frameborder="0" allowfullscreen></iframe>
     </div>
-    <h3>Director : Yeongjin Kang, Sijoon Kim, Jongmin Jung and Woohee Cheon</h3>
+    <h3>Director : Yeongjin Kang, Sijoon Kim, Jongmin Jung and Wooyoung Cheon</h3>
     <h3>Editor : Jongmin Jung</h3>
     <h3>Filming : Sijoon Kim and Jaewon Choi</h3>
     <h3>Special Thanks to : Junyoung "<a href="dim.html" target="_self">Dim</a>" Kim</h3>
