--- a/works.html
+++ b/works.html
@@ -51,112 +51,112 @@
   </div>
   <div class="page-wrapper">
     <div class="work-thumbnail">
-      <img src="seeyouagain_thumbnail.jpg" alt="See You Again" />
-      <a href="seeyouagain.html" target="_self">
+      <img src="/works/seeyouagain_thumbnail.jpg" alt="See You Again" />
+      <a href="/works/seeyouagain.html" target="_self">
         <div class="overlay">
           <div class="text">See You Again<br/>(Tribute to Arteiyu)<br/>2017</div>
         </div>
       </a>
     </div><div class="work-thumbnail">
-      <img src="lately_thumbnail.jpg" alt="Lately" />
-      <a href="lately.html" target="_self">
+      <img src="/works/lately_thumbnail.jpg" alt="Lately" />
+      <a href="/works/lately.html" target="_self">
         <div class="overlay">
           <div class="text">Lately<br/>2016</div>
         </div>
       </a>
     </div><div class="work-thumbnail">
-      <img src="supper_thumbnail.jpg" alt="Supper" />
-      <a href="supper.html" target="_self">
+      <img src="/works/supper_thumbnail.jpg" alt="Supper" />
+      <a href="/works/supper.html" target="_self">
         <div class="overlay">
           <div class="text">Supper<br/>(만찬)<br/>2016</div>
         </div>
       </a>
     </div><div class="work-thumbnail">
-      <img src="modernist_thumbnail.jpg" alt="The Days of Modernist Uhheung" />
-      <a href="modernist.html" target="_self">
+      <img src="/works/modernist_thumbnail.jpg" alt="The Days of Modernist Uhheung" />
+      <a href="/works/modernist.html" target="_self">
         <div class="overlay">
           <div class="text">The Days of Modernist Uhheung<br/>2016</div>
         </div>
       </a>
     </div><div class="work-thumbnail">
-      <img src="conti_thumbnail.jpg" alt="Conti" />
-      <a href="conti.html" target="_self">
+      <img src="/works/conti_thumbnail.jpg" alt="Conti" />
+      <a href="/works/conti.html" target="_self">
         <div class="overlay">
           <div class="text">Conti<br/>2017</div>
         </div>
       </a>
     </div><div class="work-thumbnail">
-      <img src="escapism_thumbnail.jpg" alt="Escapism" />
-      <a href="escapism.html" target="_self">
+      <img src="/works/escapism_thumbnail.jpg" alt="Escapism" />
+      <a href="/works/escapism.html" target="_self">
         <div class="overlay">
           <div class="text">Escapism<br/>2016</div>
         </div>
       </a>
     </div><div class="work-thumbnail">
-      <img src="third_thumbnail.jpg" alt="Third Person Reverie" />
-      <a href="third.html" target="_self">
+      <img src="/works/third_thumbnail.jpg" alt="Third Person Reverie" />
+      <a href="/works/third.html" target="_self">
         <div class="overlay">
           <div class="text">Third Person Reverie<br/>2016</div>
         </div>
       </a>
     </div><div class="work-thumbnail">
-      <img src="vanessa_thumbnail.jpg" alt="Vanessa" />
-      <a href="vanessa.html" target="_self">
+      <img src="/works/vanessa_thumbnail.jpg" alt="Vanessa" />
+      <a href="/works/vanessa.html" target="_self">
         <div class="overlay">
           <div class="text">Vanessa<br/>2017</div>
         </div>
       </a>
     </div><div class="work-thumbnail">
-      <img src="sound_thumbnail.jpg" alt="Sound" />
-      <a href="sound.html" target="_self">
+      <img src="/works/sound_thumbnail.jpg" alt="Sound" />
+      <a href="/works/sound.html" target="_self">
         <div class="overlay">
           <div class="text">KIA Motors Sound Design<br/>2017</div>
         </div>
       </a>
     </div><div class="work-thumbnail">
-      <img src="futurelab_thumbnail.jpg" alt="Future Lab" />
-      <a href="futurelab.html" target="_self">
+      <img src="/works/futurelab_thumbnail.jpg" alt="Future Lab" />
+      <a href="/works/futurelab.html" target="_self">
         <div class="overlay">
           <div class="text">Future Lab<br/>2016</div>
         </div>
       </a>
     </div><div class="work-thumbnail">
-      <img src="ibrush_thumbnail.jpg" alt="iBrush" />
-      <a href="ibrush.html" target="_self">
+      <img src="/works/ibrush_thumbnail.jpg" alt="iBrush" />
+      <a href="/works/ibrush.html" target="_self">
         <div class="overlay">
           <div class="text">iBrush<br/>2017</div>
         </div>
       </a>
     </div><div class="work-thumbnail">
-      <img src="pormoku_thumbnail.jpg" alt="Pormoku" />
-      <a href="pormoku.html" target="_self">
+      <img src="/works/pormoku_thumbnail.jpg" alt="Pormoku" />
+      <a href="/works/pormoku.html" target="_self">
         <div class="overlay">
           <div class="text">Pormoku<br/>2016</div>
         </div>
       </a>
     </div><div class="work-thumbnail">
-      <img src="gamja_thumbnail.jpg" alt="Feeling Potatoes" />
-      <a href="potato.html" target="_self">
+      <img src="/works/gamja_thumbnail.jpg" alt="Feeling Potatoes" />
+      <a href="/works/potato.html" target="_self">
         <div class="overlay">
           <div class="text">Feeling Potatoes<br/>(느낄감자)<br/>2016</div>
         </div>
       </a>
     </div><div class="work-thumbnail">
-        <img src="way_thumbnail.jpg" alt="Way to Him" />
-        <a href="way.html" target="_self">
+        <img src="/works/way_thumbnail.jpg" alt="Way to Him" />
+        <a href="/works/way.html" target="_self">
           <div class="overlay">
             <div class="text">Way to Him<br/>2017</div>
           </div>
         </a>
       </div><div class="work-thumbnail">
-      <img src="music_thumbnail.jpg" alt="Music Works" />
-      <a href="music.html" target="_self">
+      <img src="/works/music_thumbnail.jpg" alt="Music Works" />
+      <a href="/works/music.html" target="_self">
         <div class="overlay">
           <div class="text">Music Works<br/>2017~</div>
         </div>
       </a>
     </div><div class="work-thumbnail">
-      <img src="image_thumbnail.jpg" alt="Photo Works" />
+      <img src="/works/image_thumbnail.jpg" alt="Photo Works" />
       <a href="https://imgur.com/a/FzDzS" target="_blank">
         <div class="overlay">
           <div class="text">Photo Works<br/>2017~</div>
