--- a/works/potato.html
+++ b/works/potato.html
@@ -6,8 +6,8 @@
   <meta charset="utf-8">
   <title>sakemin</title>
   <link rel="stylesheet" href="pormoku.css">
-  <link rel="icon" href="favicon.png" sizes="96x96">
-  <script src="sketch.js"></script>
+  <link rel="icon" href="/favicon.png" sizes="96x96">
+  <script src="/sketch.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Raleway|Ubuntu" rel="stylesheet">
   <link href="http://fonts.googleapis.com/earlyaccess/jejugothic.css" rel="stylesheet">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
@@ -16,7 +16,7 @@
 <body>
   <nav class="abs-nav">
     <br/>
-    <a href="index.html" target="_self" id="tomain"><img src="sakemin_logo_alpha.png" alt="sakemin" id="logo"/></a>
+    <a href="index.html" target="_self" id="tomain"><img src="/sakemin_logo_alpha.png" alt="sakemin" id="logo"/></a>
     <ul class="tab-wrapper">
       <li class="tab">
         <a href="about.html" target="_self" id="about">
@@ -34,10 +34,10 @@
           </a>
       </li>
       <div id="iconbar">
-        <a href="http://www.facebook.com/uhheung" target="_blank"><img src="facebook.png" alt="facebook" id="facebook" class="icon"/></a>
-        <a href="https://www.instagram.com/sake_min/" target="_blank"><img src="instagram.png" alt="instagram" id="instagram" class="icon"/></a>
-        <a href="https://soundcloud.com/sakemin" target="_blank"><img src="soundcloud.png" alt="soundcloud" id="soundcloud" class="icon"/></a>
-        <a href="https://sakemin.imgur.com/" target="_blank"><img src="imgur.png" alt="imgur" id="imgur" class="icon"/></a>
+        <a href="http://www.facebook.com/uhheung" target="_blank"><img src="/facebook.png" alt="facebook" id="facebook" class="icon"/></a>
+        <a href="https://www.instagram.com/sake_min/" target="_blank"><img src="/instagram.png" alt="instagram" id="instagram" class="icon"/></a>
+        <a href="https://soundcloud.com/sakemin" target="_blank"><img src="/soundcloud.png" alt="soundcloud" id="soundcloud" class="icon"/></a>
+        <a href="https://sakemin.imgur.com/" target="_blank"><img src="/imgur.png" alt="imgur" id="imgur" class="icon"/></a>
       </div>
     </ul>
   </nav>
@@ -48,14 +48,14 @@
   </div>
 
   <div class="page-wrapper">
-    <h1>KIA Motors Sound Design</h1>
-    <h2>2017</h2>
-    <div id="video">
-      <iframe width="100%" height="100%" src="https://www.youtube.com/embed/RZ6pcunNWes" frameborder="0" allowfullscreen></iframe>
-    </div>
+    <h1>Feeling Potatoes(느낄감자)</h1>
+    <h2>2016</h2>
+      <img src="gamja_1.jpg" style="width:100%;"/><br/><br/>
+      <img src="gamja_2.jpg" style="width:100%;"/><br/><br/>
+      <img src="gamja_3.jpg" style="width:100%;"/><br/><br/>
+      <img src="gamja_4.jpg" style="width:100%;"/>
     <div id="description"><br/>
-      No offense to KIA Motors and LG Electronics.
-      <br/>
+      Brand Identity &amp; Packaging &amp; Interior Design for my dream potato chips place.
     </div>
   </div>
 
