--- a/works/seeyouagain.html
+++ b/works/seeyouagain.html
@@ -6,8 +6,8 @@
   <meta charset="utf-8">
   <title>sakemin</title>
   <link rel="stylesheet" href="pormoku.css">
-  <link rel="icon" href="favicon.png" sizes="96x96">
-  <script src="sketch.js"></script>
+  <link rel="icon" href="/favicon.png" sizes="96x96">
+  <script src="/sketch.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Raleway|Ubuntu" rel="stylesheet">
   <link href="http://fonts.googleapis.com/earlyaccess/jejugothic.css" rel="stylesheet">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
@@ -16,7 +16,7 @@
 <body>
   <nav class="abs-nav">
     <br/>
-    <a href="index.html" target="_self" id="tomain"><img src="sakemin_logo_alpha.png" alt="sakemin" id="logo"/></a>
+    <a href="index.html" target="_self" id="tomain"><img src="/sakemin_logo_alpha.png" alt="sakemin" id="logo"/></a>
     <ul class="tab-wrapper">
       <li class="tab">
         <a href="about.html" target="_self" id="about">
@@ -34,10 +34,10 @@
           </a>
       </li>
       <div id="iconbar">
-        <a href="http://www.facebook.com/uhheung" target="_blank"><img src="facebook.png" alt="facebook" id="facebook" class="icon"/></a>
-        <a href="https://www.instagram.com/sake_min/" target="_blank"><img src="instagram.png" alt="instagram" id="instagram" class="icon"/></a>
-        <a href="https://soundcloud.com/sakemin" target="_blank"><img src="soundcloud.png" alt="soundcloud" id="soundcloud" class="icon"/></a>
-        <a href="https://sakemin.imgur.com/" target="_blank"><img src="imgur.png" alt="imgur" id="imgur" class="icon"/></a>
+        <a href="http://www.facebook.com/uhheung" target="_blank"><img src="/facebook.png" alt="facebook" id="facebook" class="icon"/></a>
+        <a href="https://www.instagram.com/sake_min/" target="_blank"><img src="/instagram.png" alt="instagram" id="instagram" class="icon"/></a>
+        <a href="https://soundcloud.com/sakemin" target="_blank"><img src="/soundcloud.png" alt="soundcloud" id="soundcloud" class="icon"/></a>
+        <a href="https://sakemin.imgur.com/" target="_blank"><img src="/imgur.png" alt="imgur" id="imgur" class="icon"/></a>
       </div>
     </ul>
   </nav>
