--- a/works/modernist.html
+++ b/works/modernist.html
@@ -16,7 +16,7 @@
 <body>
   <nav class="abs-nav">
     <br/>
-    <a href="index.html" target="_self" id="tomain"><img src="/sakemin_logo_alpha.png" alt="sakemin" id="logo"/></a>
+    <a href="/index.html" target="_self" id="tomain"><img src="/sakemin_logo_alpha.png" alt="sakemin" id="logo"/></a>
     <ul class="tab-wrapper">
       <li class="tab">
         <a href="/about.html" target="_self" id="about">
