--- a/pokesketch/index.html
+++ b/pokesketch/index.html
@@ -8,5 +8,6 @@
   <body>
     <div id = "sketchold"></div>
     Use arrow keys.(→ ← ↑ ↓)
+    All graphic sprites are from Pokemon by Nintendo.
   </body>
 </html>
