--- a/pokesketch/index.html
+++ b/pokesketch/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div id = "sketchold"></div>
-    Use arrow keys.(→ ← ↑ ↓)
+    Use arrow keys.(→ ← ↑ ↓)</br></br>
     All graphic sprites are from Pokemon by Nintendo.
   </body>
 </html>
