--- a/works.html
+++ b/works.html
@@ -51,6 +51,14 @@
   </div>
   <div class="page-wrapper">
     <div class="work-thumbnail">
+    <img src="/works/object_1.jpg" alt="Objects in mirror are closer than they appear." />
+    <a href="/works/object.html" target="_self">
+      <div class="overlay">
+        <div class="text">Objects in mirror are closer than they appear.<br/>2017</div>
+      </div>
+    </a>
+  </div>
+    <div class="work-thumbnail">
       <img src="/works/seeyouagain_thumbnail.jpg" alt="See You Again" />
       <a href="/works/seeyouagain.html" target="_self">
         <div class="overlay">
@@ -167,7 +175,7 @@
   <div id="mainfooter">
     <br/>
     <br/>
-    <br/> Jongmin <a href="index.html">'sakemin'</a> Jung<br/><br/> Art &amp; Technology at Sogang Univ.<br/><br/> ⓒ 2017. sakemin all rights reserved.<br/><br/><a href="/work/gyroid.html">띠용</a>
+    <br/> Jongmin <a href="index.html">'sakemin'</a> Jung<br/><br/> Art &amp; Technology at Sogang Univ.<br/><br/> ⓒ 2017. sakemin all rights reserved.<br/><br/><a href="/works/gyroid.html">띠용</a>
   </div>
 </body>
 
