--- a/works/conti.html
+++ b/works/conti.html
@@ -50,16 +50,16 @@
   <div class="page-wrapper">
     <h1>Conti</h1>
     <h2>2017</h2>
-    <h2>with Jaewon Choi</h2>
+    <h2>with <a href="http://jtoda.one">Jaewon Choi</a></h2>
     <div id="video">
       <iframe width="100%" height="100%" src="https://www.youtube.com/embed/x9NndUXV9vY" frameborder="0" allowfullscreen></iframe>
     </div>
-    <h3>Director : Jongmin Jung, Jaewon Choi</h3>
+    <h3>Director : Jongmin Jung, <a href="http://jtoda.one">Jaewon Choi</a></h3>
     <h3>Circuitry : Jongmin Jung</h3>
-    <h3>Housing Design : Jongmin Jung, Jaewon Choi</h3>
-    <h3>Coding : Jaewon Choi</h3>
+    <h3>Housing Design : Jongmin Jung, <a href="http://jtoda.one">Jaewon Choi</a></h3>
+    <h3>Coding : <a href="http://jtoda.one">Jaewon Choi</a></h3>
     <h3>Video Filming : Jongmin Jung</h3>
-    <h3>Video Editing : Jaewon Choi</h3>
+    <h3>Video Editing : <a href="http://jtoda.one">Jaewon Choi</a></h3>
     <h3>Music : "リサフランク420 / 現代のコンピュー" by Macintosh Plus (Vektroid)</h3>
     <div id="description">
       Conti, the instrument of future which can make continious sounds.
