--- a/works/escapism.html
+++ b/works/escapism.html
@@ -50,7 +50,7 @@
   <div class="page-wrapper">
     <h1>Escapism</h1>
     <h2>2016</h2>
-    <h2>With Jaewon Choi</h2>
+    <h2>With <a href="http://jtoda.one">Jaewon Choi</a></h2>
       <img src="escapism_1.jpg" style="width:100%;"/><br/><br/>
       <img src="escapism_2.jpg" style="width:100%;"/><br/><br/>
       <img src="escapism_3.jpg" style="width:100%;"/><br/><br/>
