--- a/innerpeace/index.html
+++ b/innerpeace/index.html
@@ -31,7 +31,7 @@
       마음을 되돌아 보고 싶으면 날 클릭하렴!
     </div>
     <div class="words" id="wr-1">
-      노래 들을만 하니?
+      음악 들을만 하니?
     </div>
     <div class="words" id="wr-2">
       차 한잔이라도 주고 싶은데 그러지 못해 아쉽다.
