--- a/innerpeace/index.html
+++ b/innerpeace/index.html
@@ -130,7 +130,7 @@
       우울하면 안되는데 라는 생각은 잠시 접어두고,
     </div>
     <div class="words" id="w3-7">
-      그냥 우울함을 있는 그대로 느껴보자
+      그냥 우울함을 있는 그대로 느껴보자.
     </div>
     <div class="words" id="w3-8">
       ‘지금 우울한 나 자신이 싫어, 벗어나고 싶어.’ ‘나는 왜이러지’하는 자책이 들 수도 있어.
