--- a/innerpeace/index.html
+++ b/innerpeace/index.html
@@ -40,7 +40,7 @@
       오늘 하루 수고 많았어.
     </div>
     <div class="words" id="wr-4">
-      하루 하루 조금이라도 나은 사람이 되면 좋은거지.
+      하루 하루 조금이라도 어제보다 더 나은 사람이 되는거지.
     </div>
     <div class="words" id="wr-5">
       넌 그 존재 자체만으로도 멋진 사람이야.
