--- a/innerpeace/index.html
+++ b/innerpeace/index.html
@@ -67,7 +67,7 @@
     </div>
     <div class="words" id="wr-12">
       너가 어떤 삶을 살든, 난 널 응원할게.
-    </div>\
+    </div>
     <div class="words" id="wr-13">
       마음을 되돌아 보고 싶으면 언제든지 날 클릭해!
     </div>
