Genre/Tool Update +innerpeace +lightmaru

--- a/works.html
+++ b/works.html
@@ -51,6 +51,22 @@
   </div>
   <div class="page-wrapper">
     <div class="work-thumbnail">
+  <img src="/works/innerpeace_1.jpg" alt="Inner Peace" />
+  <a href="/works/innerpeace.html" target="_self">
+    <div class="overlay">
+      <div class="text">Inner Peace<br/>2017</div>
+    </div>
+  </a>
+</div>
+    <div class="work-thumbnail">
+    <img src="/works/lightmaru_1.jpg" alt="Lightmaru" />
+    <a href="/works/lightmaru.html" target="_self">
+      <div class="overlay">
+        <div class="text">Lightmaru<br/>(빛마루)<br/>2017</div>
+      </div>
+    </a>
+  </div>
+    <div class="work-thumbnail">
     <img src="/works/object_1.jpg" alt="Objects in mirror are closer than they appear." />
     <a href="/works/object.html" target="_self">
       <div class="overlay">
