--- a/works/futurelab.html
+++ b/works/futurelab.html
@@ -50,7 +50,9 @@
   <div class="page-wrapper">
     <h1>Future Lab</h1>
     <h2>2016</h2>
-    <h2>with Donghyun Kim and Bomi Lim</h2>
+    <h2>Interactive Artwork</h2>
+    <h3>Logic Pro X, Unreal Engine</h3>
+    <h3>with Donghyun Kim and Bomi Lim</h3>
     <div id="video">
       <iframe width="100%" height="100%" src="https://www.youtube.com/embed/u7aj-myncPk" frameborder="0" allowfullscreen></iframe>
     </div>
