--- a/works/lightmaru.html
+++ b/works/lightmaru.html
@@ -48,22 +48,27 @@
   </div>
 
   <div class="page-wrapper">
-    <h1>iBrush</h1>
+    <h1>Lightmaru(빛마루)</h1>
     <h2>2017</h2>
-    <h2>Virtual Brush Application</h2>
-    <h3>Processing, OSC</h3>
-    <div id="video">
-      <iframe width="100%" height="100%" src="https://www.youtube.com/embed/QdK2MXjJFH4" frameborder="0" allowfullscreen></iframe>
-    </div>
-    <div id="description"><br/>
-      Using OSC, you can draw your imagination with your cellphone as a brush!
+    <h2>Spatial Dynamics</h2>
+    <h3>With Sijoon Kim, Jinkyeong Song</h3>
+      <img src="lightmaru_1.jpg" style="width:100%;"/><br/><br/>
+      <img src="lightmaru_2.jpg" style="width:100%;"/><br/><br/>
+      <img src="lightmaru_3.jpg" style="width:100%;"/><br/><br/>
+      <img src="lightmaru_4.jpg" style="width:100%;"/><br/><br/>
+      <img src="lightmaru_5.jpg" style="width:100%;"/><br/><br/>
+      <img src="lightmaru_6.jpg" style="width:100%;"/><br/><br/>
+      <img src="lightmaru_7.jpg" style="width:100%;"/><br/><br/>
+      <img src="lightmaru_8.jpg" style="width:100%;"/>
+    <div lang="ko" id="description"><br/>
+        젊은 건축가 프로젝트를 기반으로 한 작업.
     </div>
   </div>
 
   <div id="mainfooter">
     <br/>
     <br/>
-    <br/> Jongmin <a href="/index.html">'sakemin'</a> Jung<br/><br/> Art &amp; Technology at Sogang Univ.<br/><br/> ⓒ 2017. sakemin all rights reserved.<br/><br/>
+    <br/> Jongmin <a href="index.html">'sakemin'</a> Jung<br/><br/> Art &amp; Technology at Sogang Univ.<br/><br/> ⓒ 2017. sakemin all rights reserved.<br/><br/>
   </div>
 </body>
 
