--- a/works/modernist.html
+++ b/works/modernist.html
@@ -50,7 +50,9 @@
   <div class="page-wrapper">
     <h1>The Days of Modernist Uhheung(모더니스트 어흥씨의 일일)</h1>
     <h2>2016</h2>
-    <h2>with Sijoon Kim, Woosik Kim and Dongmin Kim</h2>
+    <h2>Video Series</h2>
+    <h3>Adobe After Effect, Adobe Premiere</h3>
+    <h3>with Sijoon Kim, Woosik Kim and Dongmin Kim</h3>
     <div id="video">
       <iframe width="100%" height="100%" src="https://www.youtube.com/embed/XQn_npV_404" frameborder="0" allowfullscreen></iframe>
     </div>
