--- a/works/pormoku.html
+++ b/works/pormoku.html
@@ -50,7 +50,10 @@
   <div class="page-wrapper">
     <h1>Pormoku</h1>
     <h2>2016</h2>
-    <h2>with Youngseo Kim</h2>
+    <h2>Game</h2>
+    <h3>Processing, Unity</h3>
+    <h3>with Youngseo Kim</h3>
+    <h3>Background Music by Bonsung Koo</h3>
     <div id="video">
       <iframe width="100%" height="100%" src="https://www.youtube.com/embed/ENu_IeofCcA" frameborder="0" allowfullscreen></iframe>
     </div>
