--- a/works/potato.html
+++ b/works/potato.html
@@ -50,6 +50,8 @@
   <div class="page-wrapper">
     <h1>Feeling Potatoes(느낄감자)</h1>
     <h2>2016</h2>
+    <h2>Brand Design</h2>
+    <h3>Autodesk Maya, Adobe Illustrator, Adobe Photoshop</h3>
       <img src="gamja_1.jpg" style="width:100%;"/><br/><br/>
       <img src="gamja_2.jpg" style="width:100%;"/><br/><br/>
       <img src="gamja_3.jpg" style="width:100%;"/><br/><br/>
