--- a/works/seeyouagain.html
+++ b/works/seeyouagain.html
@@ -50,7 +50,9 @@
   <div class="page-wrapper">
     <h1>See You Again</h1>
     <h2>2017</h2>
-    <h2>Tribute to <a href="https://www.youtube.com/user/Arteiyu" target="_blank">Woosik "Arteiyu" Kim</a></h2>
+    <h2>Simulation</h2>
+    <h3>Processing</h3>
+    <h3>Tribute to <a href="https://www.youtube.com/user/Arteiyu" target="_blank">Woosik "Arteiyu" Kim</a></h3>
     <div id="video">
       <iframe width="100%" height="100%" src="https://www.youtube.com/embed/gHkXuldTugM" frameborder="0" allowfullscreen></iframe>
     </div>
