--- a/works/sound.html
+++ b/works/sound.html
@@ -50,6 +50,8 @@
   <div class="page-wrapper">
     <h1>KIA Motors Sound Design</h1>
     <h2>2017</h2>
+    <h2>Sound Design</h2>
+    <h3>Ableton Live</h3>
     <div id="video">
       <iframe width="100%" height="100%" src="https://www.youtube.com/embed/RZ6pcunNWes" frameborder="0" allowfullscreen></iframe>
     </div>
