--- a/works/conti.html
+++ b/works/conti.html
@@ -50,7 +50,9 @@
   <div class="page-wrapper">
     <h1>Conti</h1>
     <h2>2017</h2>
-    <h2>with <a href="http://jtoda.one">Jaewon Choi</a></h2>
+    <h2>Product Design</h2>
+    <h3>Arduino, Swift, AudioKit</h3>
+    <h3>with <a href="http://jtoda.one">Jaewon Choi</a></h3>
     <div id="video">
       <iframe width="100%" height="100%" src="https://www.youtube.com/embed/x9NndUXV9vY" frameborder="0" allowfullscreen></iframe>
     </div>
