--- a/works/dim.html
+++ b/works/dim.html
@@ -50,6 +50,8 @@
   <div class="page-wrapper">
     <h1>Mr. Dim</h1>
     <h2>2015</h2>
+    <h2>Poster Design</h2>
+    <h3>Adobe Photoshop</h3>
       <img src="dim_1.jpg" style="width:100%;"/><br/><br/>
       <img src="dim_2.jpg" style="width:100%;"/>
     <div lang="ko" id="description"><br/>
