--- a/works/lately.html
+++ b/works/lately.html
@@ -50,6 +50,8 @@
   <div class="page-wrapper">
     <h1>Lately</h1>
     <h2>2016</h2>
+    <h2>3D Artwork</h2>
+    <h3>Autodesk Maya</h3>
       <img src="lately_1.png" style="width:100%;"/><br/><br/>
       <img src="lately_2.png" style="width:100%;"/>
     <h3>Lately - 요즘 내 머릿속을 떠나지 않는 생각 조각들의 세상</h3>
