--- a/works/supper.html
+++ b/works/supper.html
@@ -50,7 +50,8 @@
   <div class="page-wrapper">
     <h1>Supper(만찬)</h1>
     <h2>2016</h2>
-    <h2>with Yeongjin Kang, Sijoon Kim and Wooyoung Cheon</h2>
+    <h2>Short Film</h2>
+    <h3>with Yeongjin Kang, Sijoon Kim and Wooyoung Cheon</h3>
     <div id="video">
       <iframe width="100%" height="100%" src="https://www.youtube.com/embed/zUKgTfEOhM4" frameborder="0" allowfullscreen></iframe>
     </div>
