--- a/works/third.html
+++ b/works/third.html
@@ -50,7 +50,9 @@
   <div class="page-wrapper">
     <h1>Third Person Reverie</h1>
     <h2>2016</h2>
-    <h2>With <a href="http://jtoda.one">Jaewon Choi</a></h2>
+    <h2>Media Art / Installation</h2>
+    <h3>Processing Logic Pro X</h3>
+    <h3>With <a href="http://jtoda.one">Jaewon Choi</a></h3>
       <img src="third_1.jpg" style="width:100%;"/><br/><br/>
       <img src="third_2.jpg" style="width:100%;"/><br/><br/>
       <img src="third_3.jpg" style="width:100%;"/><br/><br/>
