--- a/works/way.html
+++ b/works/way.html
@@ -50,6 +50,7 @@
   <div class="page-wrapper">
     <h1>Way to Him</h1>
     <h2>2017</h2>
+    <h2>Spatial Dynamics</h2>
       <img src="way_01.jpg" style="width:100%;"/><br/><br/>
       <img src="way_02.jpg" style="width:100%;"/>
     <div lang="ko" id="description"><br/>
