onclick on pagewrapper

--- a/works.html
+++ b/works.html
@@ -50,7 +50,7 @@
 
   </div>
   <div class="page-wrapper">
-    <div class="work-thumbnail">
+    <div class="work-thumbnail" onclick="">
   <img src="/works/innerpeace_1.jpg" alt="Inner Peace" />
   <a href="/works/innerpeace.html" target="_self">
     <div class="overlay">
