--- a/about.html
+++ b/about.html
@@ -51,12 +51,12 @@
       <img src="profile.jpg" slt"profile" id="profile" align="right"/>
     <h1>Jongmin "sakemin" Jung</h1>
     <h1 lang="ko">정종민</h1>
-    <h2>- Born on 1st of April, 1997</h2>
-    <h2>- Seoul, S. Korea</h2>
-    <h2>- Undergraduate at Art &amp; Technology in Sogang Univ.</h2>
-    <h2>- Media Artist</h2>
-    <h2>- Game Director</h2>
-    <div id="about-text">&nbsp;&nbsp;Jongmin Jung is a undergraduate student majoring in Art &amp; Technology at Sogang University in South Korea. He is studying media arts, sound design, game direction, filmmaking, physical computing, UI/UX design and so on. He loves playing games as well as making ones. He is into Pokemon series recently. His soul Pokemon is Snorlax. One day, he will make an awesome game just like Pokemon. Count on it!</div>
+    <h2> 1 April, 1997</h2>
+    <h2> Seoul, Republic of Korea</h2>
+    <h2> Undergraduate at Art &amp; Technology in Sogang Univ.</h2>
+    <h3> Media Artist</h3>
+    <h3> Game Director</h3>
+    <div id="about-text">&nbsp;&nbsp;Jongmin Jung is a undergraduate student majoring in Art &amp; Technology at Sogang University in South Korea. He is studying in media arts, sound design, game making, filmmaking, physical computing and so on. Recently he is working on VR works and video arts.</div>
     </div>
   </div>
   <div id="mainfooter">
