--- a/works.html
+++ b/works.html
@@ -178,7 +178,7 @@
       </a>
     </div><div class="work-thumbnail">
       <img src="/works/image_thumbnail.jpg" alt="Photo Works" />
-      <a href="https://imgur.com/a/FzDzS" target="_blank">
+      <a href="https://sakemin.imgur.com/" target="_blank">
         <div class="overlay">
           <div class="text">Photo Works<br/>2017~</div>
         </div>
