--- a/works.html
+++ b/works.html
@@ -51,6 +51,13 @@
   </div>
   <div class="page-wrapper">
     <div class="work-thumbnail">
+  <img src="/works/roam_4.jpg" alt="Roam" />
+  <a href="/works/roam.html" target="_self">
+    <div class="overlay">
+      <div class="text">Roam<br/>2018</div>
+    </div>
+  </a>
+</div><div class="work-thumbnail">
   <img src="/works/innerpeace_1.jpg" alt="Inner Peace" />
   <a href="/works/innerpeace.html" target="_self">
     <div class="overlay">
